Prez works now...

--- a/uflorida2019/css/myTheme.css
+++ b/uflorida2019/css/myTheme.css
@@ -172,7 +172,7 @@ thead, tfoot, tr:nth-child(even) { background: none; }
 /* Add image and change bg color */
 .title-slide {
    background-image: url(/images/USGS_logo.png); 
-   background-position: bottom 90px right 180px; 
+   background-position:  left 110px bottom 10px;
    background-size: 15%; 
 /*   box-shadow: inset 0 0 5px 2px #282a2d; /* mark the inset ; add a shadow around the title slide */ 
    background-color: #fefdfa; /*fefdfa - cream unl */
@@ -189,7 +189,7 @@ thead, tfoot, tr:nth-child(even) { background: none; }
   line-height: 1.10;
   text-align: left;
   text-shadow: none;
-  padding-bottom: 10px;
+  padding-top: 0px;
   margin-bottom: 18px;
 }
 
