--- a/uflorida2019/css/myTheme.css
+++ b/uflorida2019/css/myTheme.css
@@ -1,7 +1,7 @@
 /*
 CSS for xaringan slides in RU flavor
-Author: Joseph V. Casillas 
-Updated by Jessica Burnett to UNL logo, colors, styling
+Original Author: Joseph V. Casillas 
+CSS Updated by Jessica Burnett to reflect USGS logo, color (green)
 */
 
 /* Package defaults that we slightly tweak */
